Fix various Markdown issues in Games

--- a/files/en-us/games/index.html
+++ b/files/en-us/games/index.html
@@ -12,9 +12,7 @@ tags:
 ---
 <div>{{GamesSidebar}}</div>
 
-<div class="summary">
-<p><span class="seoSummary">Gaming is one of the most popular computer activities. New technologies are constantly arriving to make it possible to develop better and more powerful games that can be run in any standards-compliant web browser.</span></p>
-</div>
+<p>Gaming is one of the most popular computer activities. New technologies are constantly arriving to make it possible to develop better and more powerful games that can be run in any standards-compliant web browser.</p>
 
 <div>{{EmbedGHLiveSample("web-tech-games/index.html", '100%', 820)}}</div>
 
@@ -24,7 +22,7 @@ tags:
 
 <p>We've also included a reference section so you can easily find information about all the most common APIs used in game development.</p>
 
-<div class="note"><strong>Note:</strong> Creating games on the web draws on a number of core web technologies such as HTML, CSS, and JavaScript. The <a href="/en-US/docs/Learn">Learning Area</a> is a good place to go to get started with the basics.</div>
+<div class="note"><p><strong>Note:</strong> Creating games on the web draws on a number of core web technologies such as HTML, CSS, and JavaScript. The <a href="/en-US/docs/Learn">Learning Area</a> is a good place to go to get started with the basics.</p></div>
 
 <h2 id="Port_native_games_to_the_Web">Port native games to the Web</h2>
 
