--- a/files/en-us/games/publishing_games/game_distribution/index.html
+++ b/files/en-us/games/publishing_games/game_distribution/index.html
@@ -16,7 +16,7 @@ tags:
 ---
 <div>{{GamesSidebar}}</div>
 
-<p class="summary">You've followed a <a href="/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript">tutorial</a> or <a href="/en-US/docs/Games/Tutorials/2D_breakout_game_Phaser">two</a> and created an HTML5 game — that's great! This article covers all you need to know about the ways in which you can distribute your newly created game into the wild. This includes hosting it yourself online, submitting it to open marketplaces, and submitting it to closed ones like Google Play or the iOS App Store.</p>
+<p>You've followed a <a href="/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript">tutorial</a> or <a href="/en-US/docs/Games/Tutorials/2D_breakout_game_Phaser">two</a> and created an HTML5 game — that's great! This article covers all you need to know about the ways in which you can distribute your newly created game into the wild. This includes hosting it yourself online, submitting it to open marketplaces, and submitting it to closed ones like Google Play or the iOS App Store.</p>
 
 <h2 id="benefits_of_HTML5_over_native">Benefits of HTML5 over native</h2>
 
@@ -79,7 +79,7 @@ tags:
 <p>Let's see what the available options are regarding the marketplaces/stores available for different platforms and operating systems.</p>
 
 <div class="note">
-<p><strong>Note</strong>: These are the most popular distribution platforms, but this is not to say these are the only options. Instead of trying to add your game to the thousands of others in the iOS store say, you can also try to find a niche and promote directly to the audience who would be interested in your games. Your creativity is critical here.</p>
+<p><strong>Note:</strong> These are the most popular distribution platforms, but this is not to say these are the only options. Instead of trying to add your game to the thousands of others in the iOS store say, you can also try to find a niche and promote directly to the audience who would be interested in your games. Your creativity is critical here.</p>
 </div>
 
 <h3 id="web_stores">Web stores</h3>
