--- a/files/en-us/games/techniques/3d_on_the_web/building_up_a_basic_demo_with_playcanvas/editor/index.html
+++ b/files/en-us/games/techniques/3d_on_the_web/building_up_a_basic_demo_with_playcanvas/editor/index.html
@@ -16,7 +16,7 @@ tags:
   - editor
   - rendering
 ---
-<p class="summary"><span class="seoSummary">Instead of coding everything from scratch you can also use the online <strong>PlayCanvas editor</strong>. This can be a more pleasant working environment if you are not someone who likes to code.</span></p>
+<p>Instead of coding everything from scratch you can also use the online <strong>PlayCanvas editor</strong>. This can be a more pleasant working environment if you are not someone who likes to code.</p>
 
 <h2 id="Creating_an_account">Creating an account</h2>
 
@@ -71,7 +71,7 @@ tags:
 <p>To change its color we'll use the <em>Diffuse</em> option in the entity inspector. Click <em>Diffuse</em>, then select the colored box next to the Color label — it will open a color wheel. From here you can click your desired color or enter it in the bottom text field as a hex value. We've chosen a blue color with a hex value of <code>0095DD</code> — enter this code in the text field and press return for it to be accepted.</p>
 
 <div class="note">
-<p><strong>Note</strong>: Yes, you read that right — you need to enter the hex value without the hash/pound symbol.</p>
+<p><strong>Note:</strong> Yes, you read that right — you need to enter the hex value without the hash/pound symbol.</p>
 </div>
 
 <p><img alt="PlayCanvas Editor - Diffuse color" src="playcanvas-editor-diffusecolor.png" style="display: block; margin: 0px auto;"></p>
