--- a/files/en-us/games/techniques/3d_on_the_web/building_up_a_basic_demo_with_playcanvas/index.html
+++ b/files/en-us/games/techniques/3d_on_the_web/building_up_a_basic_demo_with_playcanvas/index.html
@@ -16,7 +16,7 @@ tags:
 ---
 <div>{{GamesSidebar}}</div>
 
-<p class="summary"><span class="seoSummary"><strong>PlayCanvas</strong> is a popular 3D WebGL game engine, originally created by Will Eastcott and Dave Evans. It is <a href="https://github.com/playcanvas/engine">open sourced on GitHub</a>, with an <a href="https://developer.playcanvas.com/en/user-manual/designer/">editor</a> available online and good <a href="https://developer.playcanvas.com/en/">documentation</a>.</span> The online editor is free for public projects with up to two team members, but there are also <a href="https://playcanvas.com/plans">paid plans</a> if you'd like to run a commercial private project with more developers.</p>
+<p><strong>PlayCanvas</strong> is a popular 3D WebGL game engine, originally created by Will Eastcott and Dave Evans. It is <a href="https://github.com/playcanvas/engine">open sourced on GitHub</a>, with an <a href="https://developer.playcanvas.com/en/user-manual/designer/">editor</a> available online and good <a href="https://developer.playcanvas.com/en/">documentation</a>. The online editor is free for public projects with up to two team members, but there are also <a href="https://playcanvas.com/plans">paid plans</a> if you'd like to run a commercial private project with more developers.</p>
 
 <p><img alt="PlayCanvas website." src="playcanvas-cover.png" style="display: block; margin: 0px auto;"></p>
 
@@ -33,7 +33,7 @@ tags:
 <p><img alt="A list of PlayCanvas demos: Tanx, Swooop, Star Lord, BMW i8." src="playcanvas-demos.png" style="display: block; margin: 0px auto;"></p>
 
 <div class="note">
-<p><strong>Note</strong>: Check out the list of <a href="https://playcanvas.com/explore">featured demos</a> to find more examples.</p>
+<p><strong>Note:</strong> Check out the list of <a href="https://playcanvas.com/explore">featured demos</a> to find more examples.</p>
 </div>
 
 <h2 id="Engine_vs_editor">Engine vs editor</h2>
