--- a/files/en-us/games/techniques/3d_on_the_web/building_up_a_basic_demo_with_three.js/index.html
+++ b/files/en-us/games/techniques/3d_on_the_web/building_up_a_basic_demo_with_three.js/index.html
@@ -16,10 +16,10 @@ tags:
 ---
 <div>{{GamesSidebar}}</div>
 
-<p class="summary">A typical 3D scene in a game — even the simplest one — contains standard items like shapes located in a coordinate system, a camera to actually see them, lights and materials to make it look better, animations to make it look alive, etc.<strong> Three.js</strong>, as with any other 3D library, provides built-in helper functions to help you implement common 3D functionality more quickly. <span class="seoSummary">In this article we'll take you through the real basics of using Three, including setting up a development environment, structuring the necessary HTML, the fundamental objects of Three, and how to build up a basic demo.</span></p>
+<p>A typical 3D scene in a game — even the simplest one — contains standard items like shapes located in a coordinate system, a camera to actually see them, lights and materials to make it look better, animations to make it look alive, etc.<strong> Three.js</strong>, as with any other 3D library, provides built-in helper functions to help you implement common 3D functionality more quickly. In this article we'll take you through the real basics of using Three, including setting up a development environment, structuring the necessary HTML, the fundamental objects of Three, and how to build up a basic demo.</p>
 
 <div class="note">
-<p><strong>Note</strong>: We chose Three because it is one of the most popular <a href="/en-US/docs/Web/API/WebGL_API">WebGL</a> libraries, and it is easy to get started with. We are not trying to say it is better than any other WebGL library available, and you should feel free to try another library, such as <a href="https://www.ambiera.com/copperlicht/index.html">CopperLicht</a>, <a href="http://www.glge.org/">GLGE</a>, or <a href="https://playcanvas.com/">PlayCanvas</a>.</p>
+<p><strong>Note:</strong> We chose Three because it is one of the most popular <a href="/en-US/docs/Web/API/WebGL_API">WebGL</a> libraries, and it is easy to get started with. We are not trying to say it is better than any other WebGL library available, and you should feel free to try another library, such as <a href="https://www.ambiera.com/copperlicht/index.html">CopperLicht</a>, <a href="http://www.glge.org/">GLGE</a>, or <a href="https://playcanvas.com/">PlayCanvas</a>.</p>
 </div>
 
 <h2 id="Environment_setup">Environment setup</h2>
@@ -107,7 +107,7 @@ scene.add(camera);
 <p>You should experiment with these values and see how they change what you see in the scene.</p>
 
 <div class="note">
-<p><strong>Note</strong>: The distance values (e.g. for the camera z position) are unitless, and can be anything you deem suitable for your scene: millimeters, meters, feet, or miles. It's up to you.</p>
+<p><strong>Note:</strong> The distance values (e.g. for the camera z position) are unitless, and can be anything you deem suitable for your scene: millimeters, meters, feet, or miles. It's up to you.</p>
 </div>
 
 <h2 id="Rendering_the_scene">Rendering the scene</h2>
