--- a/files/en-us/games/techniques/control_mechanisms/other/index.html
+++ b/files/en-us/games/techniques/control_mechanisms/other/index.html
@@ -14,7 +14,7 @@ tags:
 
 <p>{{PreviousMenu("Games/Techniques/Control_mechanisms/Desktop_with_gamepad", "Games/Techniques/Control_mechanisms")}}</p>
 
-<p class="summary">Having different control mechanisms in your game helps reach broader audiences. Implementing mobile and desktop controls is recommended is a must, and gamepad controls add that extra experience. But imagine going even further — in this article we will explore various unconventional ways to control your web game, some more unconventional than others.</p>
+<p>Having different control mechanisms in your game helps reach broader audiences. Implementing mobile and desktop controls is recommended is a must, and gamepad controls add that extra experience. But imagine going even further — in this article we will explore various unconventional ways to control your web game, some more unconventional than others.</p>
 
 <h2 id="TV_remote">TV remote</h2>
 
