--- a/files/en-us/games/techniques/controls_gamepad_api/index.html
+++ b/files/en-us/games/techniques/controls_gamepad_api/index.html
@@ -11,7 +11,7 @@ tags:
 ---
 <div>{{GamesSidebar}}</div>
 
-<p class="summary">This article looks at implementing an effective, cross-browser control system for web games using the Gamepad API, allowing you to control your web games using console game controllers. It features a case study game — Hungry Fridge, created by <a href="https://enclavegames.com/">Enclave Games</a>.</p>
+<p>This article looks at implementing an effective, cross-browser control system for web games using the Gamepad API, allowing you to control your web games using console game controllers. It features a case study game — Hungry Fridge, created by <a href="https://enclavegames.com/">Enclave Games</a>.</p>
 
 <h2 id="Controls_for_web_games">Controls for web games</h2>
 
@@ -42,7 +42,7 @@ tags:
 <p>The code explained below is from the full version of the Hungry Fridge game, but it's almost identical to the one from the demo — the only difference is that the full version uses the <code>turbo</code> variable to decide whether or not the game will be launched using Super Turbo mode. It works independently, so it could be turned on even if the gamepad is not connected.</p>
 
 <div class="note">
-<p><strong>Note</strong>: Easter Egg time: There's a hidden option to launch Super Turbo Hungry Fridge on the desktop without having a gamepad connected — click the gamepad icon in the top right corner of the screen. It will launch the game in the Super Turbo mode and you'll be able to control the Fridge with the keyboard: A and D for turning the turret left and right, W for shooting and arrow keys for movement.</p>
+<p><strong>Note:</strong> Easter Egg time: There's a hidden option to launch Super Turbo Hungry Fridge on the desktop without having a gamepad connected — click the gamepad icon in the top right corner of the screen. It will launch the game in the Super Turbo mode and you'll be able to control the Fridge with the keyboard: A and D for turning the turret left and right, W for shooting and arrow keys for movement.</p>
 </div>
 
 <h2 id="Implementation">Implementation</h2>
