--- a/files/en-us/games/techniques/crisp_pixel_art_look/index.html
+++ b/files/en-us/games/techniques/crisp_pixel_art_look/index.html
@@ -12,7 +12,9 @@ tags:
   - image-rendering
   - pixel
 ---
-<div>{{GamesSidebar}}</div><p class="summary">This article discusses a useful technique for giving your canvas/WebGL games a crisp pixel art look, even on high definition monitors.</p>
+<div>{{GamesSidebar}}</div>
+
+<p>This article discusses a useful technique for giving your canvas/WebGL games a crisp pixel art look, even on high definition monitors.</p>
 
 <h2 id="The_concept">The concept</h2>
 
@@ -89,5 +91,5 @@ image.src = 'cat.png';</pre>
 <p>{{ EmbedLiveSample('An_example', '100%', 520) }}</p>
 
 <div class="note">
-<p><strong>Note</strong>: You can check out the <a href="https://github.com/belen-albeza/retro-canvas">original code on Github</a> (<a href="https://belen-albeza.github.io/retro-canvas/">and a live example</a>.)</p>
+<p><strong>Note:</strong> You can check out the <a href="https://github.com/belen-albeza/retro-canvas">original code on Github</a> (<a href="https://belen-albeza.github.io/retro-canvas/">and a live example</a>.)</p>
 </div>
