--- a/files/en-us/games/tools/asm.js/index.html
+++ b/files/en-us/games/tools/asm.js/index.html
@@ -10,9 +10,7 @@ tags:
 
 <div>{{GamesSidebar}}</div>
 
-<div class="summary">
-<p><span class="seoSummary"><a href="http://asmjs.org/">Asm.js</a> is a specification defining a subset of JavaScript that is highly optimizable. This article looks at exactly what is permitted in the asm.js subset, what improvements it confers, where and how you can make use of it, and further resources and examples.</span></p>
-</div>
+<p><a href="http://asmjs.org/">Asm.js</a> is a specification defining a subset of JavaScript that is highly optimizable. This article looks at exactly what is permitted in the asm.js subset, what improvements it confers, where and how you can make use of it, and further resources and examples.</p>
 
 <h2 id="What_is_asm.js_exactly">What is asm.js, exactly?</h2>
 
