--- a/files/en-us/games/tools/index.html
+++ b/files/en-us/games/tools/index.html
@@ -9,9 +9,7 @@ tags:
 ---
 <div>{{GamesSidebar}}</div>
 
-<div class="summary">
-<p><span class="seoSummary">On this page you can find links to our game development tools articles, which eventually aims to cover frameworks, compilers, and debugging tools.</span></p>
-</div>
+<p>On this page you can find links to our game development tools articles, which eventually aims to cover frameworks, compilers, and debugging tools.</p>
 
 <dl>
  <dt><a href="/en-US/docs/Games/Tools/asm.js">asm.js</a></dt>
