--- a/files/en-us/games/tutorials/2d_breakout_game_phaser/bounce_off_the_walls/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_phaser/bounce_off_the_walls/index.html
@@ -15,11 +15,9 @@ tags:
 
 <p>{{PreviousNext("Games/Workflows/2D_Breakout_game_Phaser/Physics", "Games/Workflows/2D_Breakout_game_Phaser/Player_paddle_and_controls")}}</p>
 
-<div class="summary">
 <p>This is the <strong>6th step</strong> out of 16 of the <a href="/en-US/docs/Games/Tutorials/2D_breakout_game_Phaser">Gamedev Phaser tutorial</a>. You can find the source code as it should look after completing this lesson at <a href="https://github.com/end3r/Gamedev-Phaser-Content-Kit/blob/gh-pages/demos/lesson06.html">Gamedev-Phaser-Content-Kit/demos/lesson06.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">Now that physics have been introduced, we can start implementing collision detection into the game — first we'll look at the walls.</span></p>
+<p>Now that physics have been introduced, we can start implementing collision detection into the game — first we'll look at the walls.</p>
 
 <h2 id="Bouncing_off_the_world_boundaries">Bouncing off the world boundaries</h2>
 
