--- a/files/en-us/games/tutorials/2d_breakout_game_phaser/initialize_the_framework/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_phaser/initialize_the_framework/index.html
@@ -15,11 +15,9 @@ tags:
 
 <p>{{PreviousNext("Games/Workflows/2D_Breakout_game_Phaser", "Games/Workflows/2D_Breakout_game_Phaser/Scaling")}}</p>
 
-<div class="summary">
 <p>This is the first of 16 tutorials to learn how to use <a href="/en-US/docs/Games/Tutorials/2D_breakout_game_Phaser">Gamedev Phaser</a>. After completing this tutorial you can find the source code for this section at <a href="https://github.com/end3r/Gamedev-Phaser-Content-Kit/blob/gh-pages/demos/lesson01.html">Gamedev-Phaser-Content-Kit/demos/lesson01.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">Before we can start writing the game's functionality, we need to create a basic structure to render the game inside. This can be done using HTML — the Phaser framework will generate the required {{htmlelement("canvas")}} element.</span></p>
+<p>Before we can start writing the game's functionality, we need to create a basic structure to render the game inside. This can be done using HTML — the Phaser framework will generate the required {{htmlelement("canvas")}} element.</p>
 
 <h2 id="The_games_HTML">The game's HTML</h2>
 
