--- a/files/en-us/games/tutorials/2d_breakout_game_phaser/move_the_ball/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_phaser/move_the_ball/index.html
@@ -15,11 +15,9 @@ tags:
 
 <p>{{PreviousNext("Games/Workflows/2D_Breakout_game_Phaser/Load_the_assets_and_print_them_on_screen", "Games/Workflows/2D_Breakout_game_Phaser/Physics")}}</p>
 
-<div class="summary">
 <p>This is the <strong>4th step</strong> out of 16 of the <a href="/en-US/docs/Games/Tutorials/2D_breakout_game_Phaser">Gamedev Phaser tutorial</a>. You can find the source code as it should look after completing this lesson at <a href="https://github.com/end3r/Gamedev-Phaser-Content-Kit/blob/gh-pages/demos/lesson04.html">Gamedev-Phaser-Content-Kit/demos/lesson04.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">We have our blue ball printed on screen, but it's doing nothing — It would be cool to make it move somehow. This article covers how to do just that.</span></p>
+<p>We have our blue ball printed on screen, but it's doing nothing — It would be cool to make it move somehow. This article covers how to do just that.</p>
 
 <h2 id="Updating_the_balls_position_on_each_frame">Updating the ball's position on each frame</h2>
 
