--- a/files/en-us/games/tutorials/2d_breakout_game_phaser/win_the_game/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_phaser/win_the_game/index.html
@@ -15,11 +15,9 @@ tags:
 
 <p>{{PreviousNext("Games/Workflows/2D_Breakout_game_Phaser/The_score", "Games/Workflows/2D_Breakout_game_Phaser/Extra_lives")}}</p>
 
-<div class="summary">
 <p>This is the <strong>12th step</strong> out of 16 of the <a href="/en-US/docs/Games/Tutorials/2D_breakout_game_Phaser">Gamedev Phaser tutorial</a>. You can find the source code as it should look after completing this lesson at <a href="https://github.com/end3r/Gamedev-Phaser-Content-Kit/blob/gh-pages/demos/lesson12.html">Gamedev-Phaser-Content-Kit/demos/lesson12.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">Implementing winning in our game is quite easy: if you happen to destroy all the bricks, then you win.</span></p>
+<p>Implementing winning in our game is quite easy: if you happen to destroy all the bricks, then you win.</p>
 
 <h2 id="How_to_win">How to win?</h2>
 
