--- a/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/bounce_off_the_walls/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/bounce_off_the_walls/index.html
@@ -16,11 +16,9 @@ tags:
 
 <p>{{PreviousNext("Games/Workflows/2D_Breakout_game_pure_JavaScript/Move_the_ball", "Games/Workflows/2D_Breakout_game_pure_JavaScript/Paddle_and_keyboard_controls")}}</p>
 
-<div class="summary">
 <p>This is the <strong>3rd step</strong> out of 10 of the <a href="/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript">Gamedev Canvas tutorial</a>. You can find the source code as it should look after completing this lesson at <a href="https://github.com/end3r/Gamedev-Canvas-workshop/blob/gh-pages/lesson03.html">Gamedev-Canvas-workshop/lesson3.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">It is nice to see our ball moving, but it quickly disappears from the screen, limiting the fun we can have with it! To overcome that we will implement some very simple collision detection (which will be explained <a href="/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript/Collision_detection">later</a> in more detail) to make the ball bounce off the four edges of the Canvas.</span></p>
+<p>It is nice to see our ball moving, but it quickly disappears from the screen, limiting the fun we can have with it! To overcome that we will implement some very simple collision detection (which will be explained <a href="/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript/Collision_detection">later</a> in more detail) to make the ball bounce off the four edges of the Canvas.</p>
 
 <h2 id="Simple_collision_detection">Simple collision detection</h2>
 
@@ -98,7 +96,7 @@ if(y + dy &gt; canvas.height-ballRadius || y + dy &lt; ballRadius) {
 <p>{{JSFiddleEmbed("https://jsfiddle.net/end3r/redj37dc/","","395")}}</p>
 
 <div class="note">
-<p><strong>Exercise</strong>: try changing the color of the ball to a random color every time it hits the wall.</p>
+<p><strong>Note:</strong> try changing the color of the ball to a random color every time it hits the wall.</p>
 </div>
 
 <h2 id="Next_steps">Next steps</h2>
