--- a/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/build_the_brick_field/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/build_the_brick_field/index.html
@@ -13,11 +13,9 @@ tags:
 
 <p>{{PreviousNext("Games/Workflows/2D_Breakout_game_pure_JavaScript/Game_over", "Games/Workflows/2D_Breakout_game_pure_JavaScript/Collision_detection")}}</p>
 
-<div class="summary">
 <p>This is the <strong>6th step</strong> out of 10 of the <a href="/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript">Gamedev Canvas tutorial</a>. You can find the source code as it would look after completing this lesson at <a href="https://github.com/end3r/Gamedev-Canvas-workshop/blob/gh-pages/lesson06.html">Gamedev-Canvas-workshop/lesson6.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">After modifying the gameplay mechanics, we are now able to lose — this is great as it means the game is finally feeling more like a game. However, it will quickly get boring if all you do is bounce the ball off the walls and the paddle. What a breakout game really needs is some bricks to destroy with the ball, and this is what we'll create now!</span></p>
+<p>After modifying the gameplay mechanics, we are now able to lose — this is great as it means the game is finally feeling more like a game. However, it will quickly get boring if all you do is bounce the ball off the walls and the paddle. What a breakout game really needs is some bricks to destroy with the ball, and this is what we'll create now!</p>
 
 <h2 id="Setting_up_the_brick_variables">Setting up the brick variables</h2>
 
@@ -102,7 +100,7 @@ var brickY = (r*(brickHeight+brickPadding))+brickOffsetTop;</pre>
 <p>{{JSFiddleEmbed("https://jsfiddle.net/raymondjplante/Lu3vtejz/","","395")}}</p>
 
 <div class="note">
-<p>Exercise: Try changing the number of bricks in a row or a column, or their positions.</p>
+<p><strong>Note:</strong> Try changing the number of bricks in a row or a column, or their positions.</p>
 </div>
 
 <h2 id="Next_steps">Next steps</h2>
