--- a/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/create_the_canvas_and_draw_on_it/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/create_the_canvas_and_draw_on_it/index.html
@@ -15,11 +15,9 @@ tags:
 
 <p>{{PreviousNext("Games/Workflows/2D_Breakout_game_pure_JavaScript", "Games/Workflows/2D_Breakout_game_pure_JavaScript/Move_the_ball")}}</p>
 
-<div class="summary">
 <p>This is the <strong>1st step</strong> out of 10 of the <a href="/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript">Gamedev Canvas tutorial</a>. You can find the source code as it should look after completing this lesson at <a href="https://github.com/end3r/Gamedev-Canvas-workshop/blob/gh-pages/lesson01.html">Gamedev-Canvas-workshop/lesson1.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">Before we can start writing the game's functionality, we need to create a basic structure to render the game inside. This can be done using HTML and the {{htmlelement("canvas")}} element.</span></p>
+<p>Before we can start writing the game's functionality, we need to create a basic structure to render the game inside. This can be done using HTML and the {{htmlelement("canvas")}} element.</p>
 
 <h2 id="The_games_HTML">The game's HTML</h2>
 
@@ -104,7 +102,7 @@ ctx.closePath();</pre>
 <p>{{JSFiddleEmbed("https://jsfiddle.net/end3r/x62h15e2/","","395")}}</p>
 
 <div class="note">
-<p><strong>Exercise</strong>: try changing the size and color of the given shapes.</p>
+<p><strong>Note:</strong> Try changing the size and color of the given shapes.</p>
 </div>
 
 <h2 id="Next_steps">Next steps</h2>
