--- a/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/mouse_controls/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/mouse_controls/index.html
@@ -14,11 +14,9 @@ tags:
 
 <p>{{PreviousNext("Games/Workflows/2D_Breakout_game_pure_JavaScript/Track_the_score_and_win", "Games/Workflows/2D_Breakout_game_pure_JavaScript/Finishing_up")}}</p>
 
-<div class="summary">
 <p>This is the <strong>9th step</strong> out of 10 of the <a href="/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript">Gamedev Canvas tutorial</a>. You can find the source code as it should look after completing this lesson at <a href="https://github.com/end3r/Gamedev-Canvas-workshop/blob/gh-pages/lesson09.html">Gamedev-Canvas-workshop/lesson9.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">The game itself is actually finished, so let's work on polishing it up. We have already added keyboard controls, but we could easily add mouse controls too.</span></p>
+<p>The game itself is actually finished, so let's work on polishing it up. We have already added keyboard controls, but we could easily add mouse controls too.</p>
 
 <h2 id="Listening_for_mouse_movement">Listening for mouse movement</h2>
 
@@ -47,8 +45,8 @@ tags:
 
 <p>{{JSFiddleEmbed("https://jsfiddle.net/raymondjplante/vt7y5hcp/","","395")}}</p>
 
-<div class="summary">
-<p>Exercise: adjust the boundaries of the paddle movement, so the whole paddle will be visible on both edges of the Canvas instead of only half of it.</p>
+<div class="note">
+<p><strong>Note:</strong> Try adjusting the boundaries of the paddle movement, so the whole paddle will be visible on both edges of the Canvas instead of only half of it.</p>
 </div>
 
 <h2 id="Next_steps">Next steps</h2>
