--- a/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/paddle_and_keyboard_controls/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/paddle_and_keyboard_controls/index.html
@@ -15,11 +15,9 @@ tags:
 
 <p>{{PreviousNext("Games/Workflows/2D_Breakout_game_pure_JavaScript/Bounce_off_the_walls", "Games/Workflows/2D_Breakout_game_pure_JavaScript/Game_over")}}</p>
 
-<div class="summary">
 <p>This is the <strong>4th step</strong> out of 10 of the <a href="/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript">Gamedev Canvas tutorial</a>. You can find the source code as it should look after completing this lesson at <a href="https://github.com/end3r/Gamedev-Canvas-workshop/blob/gh-pages/lesson04.html">Gamedev-Canvas-workshop/lesson4.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">The ball is bouncing off the walls freely and you can watch it indefinitely, but currently there's no interactivity. It's not a game if you cannot control it! So let's add some user interaction: a controllable paddle.</span></p>
+<p>The ball is bouncing off the walls freely and you can watch it indefinitely, but currently there's no interactivity. It's not a game if you cannot control it! So let's add some user interaction: a controllable paddle.</p>
 
 <h2 id="Defining_a_paddle_to_hit_the_ball">Defining a paddle to hit the ball</h2>
 
@@ -126,7 +124,7 @@ else if(leftPressed) {
 <p>{{JSFiddleEmbed("https://jsfiddle.net/L9xfn4up/1/","","395")}}</p>
 
 <div class="note">
-<p><strong>Exercise</strong>: Make the paddle move faster or slower, or change its size.</p>
+<p><strong>Note:</strong> Try making the paddle move faster or slower, or change its size.</p>
 </div>
 
 <h2 id="Next_steps">Next steps</h2>
