--- a/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/track_the_score_and_win/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/track_the_score_and_win/index.html
@@ -14,11 +14,9 @@ tags:
 
 <p>{{PreviousNext("Games/Workflows/2D_Breakout_game_pure_JavaScript/Collision_detection", "Games/Workflows/2D_Breakout_game_pure_JavaScript/Mouse_controls")}}</p>
 
-<div class="summary">
 <p>This is the <strong>8th step</strong> out of 10 of the <a href="/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript">Gamedev Canvas tutorial</a>. You can find the source code as it should look after completing this lesson at <a href="https://github.com/end3r/Gamedev-Canvas-workshop/blob/gh-pages/lesson08.html">Gamedev-Canvas-workshop/lesson8.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">Destroying the bricks is really cool, but to be even more awesome the game could award points for every brick a user hits, and keep count of the total score.</span></p>
+<p>Destroying the bricks is really cool, but to be even more awesome the game could award points for every brick a user hits, and keep count of the total score.</p>
 
 <h2 id="Counting_the_score">Counting the score</h2>
 
@@ -90,7 +88,7 @@ tags:
 <p>{{JSFiddleEmbed("https://jsfiddle.net/raymondjplante/b3z2Lpu9/","","395")}}</p>
 
 <div class="note">
-<p><strong>Exercise</strong>: Add more points per brick hit, print out the number of collected points in the end game alert box.</p>
+<p><strong>Note:</strong>: Try adding more points per brick hit, print out the number of collected points in the end game alert box.</p>
 </div>
 
 <h2 id="Next_steps">Next steps</h2>
