--- a/files/en-us/games/tutorials/html5_gamedev_phaser_device_orientation/index.html
+++ b/files/en-us/games/tutorials/html5_gamedev_phaser_device_orientation/index.html
@@ -11,9 +11,7 @@ tags:
 ---
 <div>{{GamesSidebar}}</div>
 
-<div class="summary">
 <p>In this tutorial we’ll go through the process of building an HTML5 mobile game that uses the <a href="/en-US/docs/Web/Apps/Fundamentals/gather_and_modify_data/responding_to_device_orientation_changes">Device Orientation</a> and <a href="/en-US/docs/Web/API/Vibration_API">Vibration</a><strong> APIs</strong> to enhance the gameplay and is built using the <a class="external external-icon" href="https://phaser.io/">Phaser</a> framework. Basic JavaScript knowledge is recommended to get the most from this tutorial.</p>
-</div>
 
 <h2 id="Example_game">Example game</h2>
 
@@ -82,7 +80,7 @@ tags:
 <p>The important thing to remember is that the framework is setting up helpful methods to speed up a lot of things like image manipulation or assets management, which would be a lot harder to do manually.</p>
 
 <div class="note">
-<p><strong>Note</strong>: You can read the <a href="https://gamedevelopment.tutsplus.com/tutorials/getting-started-with-phaser-building-monster-wants-candy--cms-21723">Building Monster Wants Candy</a> article for the in-depth introduction to the basic Phaser-specific functions and methods.</p>
+<p><strong>Note:</strong> You can read the <a href="https://gamedevelopment.tutsplus.com/tutorials/getting-started-with-phaser-building-monster-wants-candy--cms-21723">Building Monster Wants Candy</a> article for the in-depth introduction to the basic Phaser-specific functions and methods.</p>
 </div>
 
 <p>Back to game states: the line below is adding a new state called <code>Boot</code> to the game:</p>
@@ -282,7 +280,7 @@ else if(this.keys.down.isDown) {
 <p><img alt="An explanation of the X, Y and Z axes of a Flame mobile device with the Cyber Orb game demo on the screen." src="cyber-orb-flame-orientation.png"></p>
 
 <div class="note">
-<p><strong>Note</strong>: To find more out about implementing device orientation and what raw code would look like, read <a href="/en-US/docs/Web/Apps/Fundamentals/gather_and_modify_data/responding_to_device_orientation_changes">Keep it level: responding to device orientation changes</a>.</p>
+<p><strong>Note:</strong> To find more out about implementing device orientation and what raw code would look like, read <a href="/en-US/docs/Web/Apps/Fundamentals/gather_and_modify_data/responding_to_device_orientation_changes">Keep it level: responding to device orientation changes</a>.</p>
 </div>
 
 <h4 id="Adding_the_hole">Adding the hole</h4>
