--- a/files/en-us/games/visual-js_game_engine/index.html
+++ b/files/en-us/games/visual-js_game_engine/index.html
@@ -35,7 +35,7 @@ tags:
  Physics done with (matter.js) matter ts</h4>
 
 <div class="notecard warning">
-<p>This part is removed from this project. New link is: https://github.com/zlatnaspirala/visual-ts-game-engine</p>
+<p><strong>Warning:</strong> This part is removed from this project. New link is: https://github.com/zlatnaspirala/visual-ts-game-engine</p>
 </div>
 
 <h3 id="Basic_licence_rules">Basic license rules:</h3>
@@ -127,7 +127,7 @@ tags:
 <p>{{EmbedYouTube("MVp-JsAha94")}}</p>
 
 <div class="warning">
-<p>If you use editor.js to visual create game object method, you must start ***node build_from_editor_to_visual_js_file.js*** on the end of work.<br>
+<p><strong>Warning:</strong> If you use editor.js to visual create game object method, you must start ***node build_from_editor_to_visual_js_file.js*** on the end of work.<br>
  This tool will create visual.js in folder starter/ with all your game object was created in editor style.</p>
 </div>
 
@@ -139,7 +139,7 @@ tags:
 <p>is new and better way. In future visual staff will be better (real time simulator will be implemented).For now this place is good for coding.</p>
 
 <div class="note">
-<p>Visual-js works direct with project files, no need for build.</p>
+<p><strong>Note:</strong> Visual-js works direct with project files, no need for build.</p>
 </div>
 
 <p>{{EmbedYouTube("kxUBPDhB-3I")}}</p>
@@ -170,7 +170,7 @@ tags:
 
 <p>{{EmbedYouTube("Y-B-PA5U6KQ")}}</p>
 
-<p class="codepen">See the Pen <a href="https://codepen.io/zlatnaspirala/pen/jrzNko/">Visual js - Pencil </a> by VisualJS game engine (<a href="https://codepen.io/zlatnaspirala">@zlatnaspirala</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+<p>See the Pen <a href="https://codepen.io/zlatnaspirala/pen/jrzNko/">Visual js - Pencil </a> by VisualJS game engine (<a href="https://codepen.io/zlatnaspirala">@zlatnaspirala</a>) on <a href="https://codepen.io">CodePen</a>.</p>
 
 <p><strong>Online demo examples at:</strong></p>
 
