--- a/files/en-us/games/visual_js_ge/index.html
+++ b/files/en-us/games/visual_js_ge/index.html
@@ -9,7 +9,7 @@ tags:
 ---
 <div>{{GamesSidebar}}</div>
 
-<p><span class="seoSummary"><strong>Visual-js </strong>GameEngine is a small but comprehensive canvas/websocket-based game engine with GUI source editor only for Windows. The server is based on Node.js vs MySql, the client made in four variant on a JavaScript frameworks for 2d canvas JS , three.js , webGL2 vs glmatrix and 2d canvas with matter.js in typescript to complete the stack.</span></p>
+<p><strong>Visual-js </strong>GameEngine is a small but comprehensive canvas/websocket-based game engine with GUI source editor only for Windows. The server is based on Node.js vs MySql, the client made in four variant on a JavaScript frameworks for 2d canvas JS , three.js , webGL2 vs glmatrix and 2d canvas with matter.js in typescript to complete the stack.</p>
 
 <h2 id="Installation_and_setup">Installation and setup</h2>
 
@@ -48,7 +48,7 @@ npm install nodemailer@0.7.0</pre>
 
 <h3 id="In_page_editor">In page editor </h3>
 
-<p id="server_instanceeditor.js">Found at <code>server_instance/editor.js</code>.</p>
+<p>Found at <code>server_instance/editor.js</code>.</p>
 
 <h3 id="build_from_editor_to_visual_js">build_from_editor_to_visual_js</h3>
 
@@ -74,13 +74,13 @@ npm install nodemailer@0.7.0</pre>
 
 <h3 id="VISUAL_JS.exe_Windows_GUI_freeware">VISUAL JS.exe Windows GUI freeware </h3>
 
-<p id="only_for_windows_users_.">Only for Windows users. Contains the following tools.</p>
+<p>Only for Windows users. Contains the following tools.</p>
 
 <ul>
- <li id="Visual_JS.exe_Version_1.0_comes_with_source_editor_.">Visual_JS.exe Version 1.0 — comes with source editor.</li>
- <li id="ML_SYS.exe_-_Multilanguage_tool_for_string_Labels_._(Smart_xml_operation_-_No_empty_tags_)">ML_SYS.exe — Multilanguage tool for string labels (smart XML operation; no empty tags).</li>
- <li id="CriptingJS.exe_-_Based_on_javascriptobfuscator.com_API">ScriptingJS.exe — Based on javascriptobfuscator.com API.</li>
- <li id="MakeLib.exe_-_Need_fot_bug_fixing">MakeLib.exe — Needed for font bug fixing.</li>
+ <li>Visual_JS.exe Version 1.0 — comes with source editor.</li>
+ <li>ML_SYS.exe — Multilanguage tool for string labels (smart XML operation; no empty tags).</li>
+ <li>ScriptingJS.exe — Based on javascriptobfuscator.com API.</li>
+ <li>MakeLib.exe — Needed for font bug fixing.</li>
 </ul>
 
 <h2 id="Video_tutorials">Video tutorials</h2>
