--- a/files/en-us/games/examples/index.html
+++ b/files/en-us/games/examples/index.html
@@ -9,7 +9,7 @@ tags:
 ---
 <div>{{GamesSidebar}}</div>
 
-<p class="summary"><span class="seoSummary">This page lists a number of impressive web technology demos for you to get inspiration from, and generally have fun with. A testament to what can be done with JavaScript, WebGL, and related technologies.</span> The first two sections list playable games, while the second is a catch-all area to list demos that aren't necessarily interactive/games.</p>
+<p>This page lists a number of impressive web technology demos for you to get inspiration from, and generally have fun with. A testament to what can be done with JavaScript, WebGL, and related technologies. The first two sections list playable games, while the second is a catch-all area to list demos that aren't necessarily interactive/games.</p>
 
 <h2 id="Freedemo_games">Free/demo games</h2>
 
