--- a/files/en-us/games/publishing_games/game_promotion/index.html
+++ b/files/en-us/games/publishing_games/game_promotion/index.html
@@ -12,7 +12,7 @@ tags:
 ---
 <div>{{GamesSidebar}}</div>
 
-<p class="summary">Developing and publishing your game is not enough. You have to let the world know that you have something interesting available that people will enjoy playing. There are many ways to promote your game — most of them being free, so even if you're struggling to make a living as an indie dev with zero budget you can still do a lot to let people know about your great new game. Promoting the game helps a lot when <a href="/en-US/docs/Games/Publishing_games/Game_monetization">monetizing</a> it later on too, so it's important to do it correctly.</p>
+<p>Developing and publishing your game is not enough. You have to let the world know that you have something interesting available that people will enjoy playing. There are many ways to promote your game — most of them being free, so even if you're struggling to make a living as an indie dev with zero budget you can still do a lot to let people know about your great new game. Promoting the game helps a lot when <a href="/en-US/docs/Games/Publishing_games/Game_monetization">monetizing</a> it later on too, so it's important to do it correctly.</p>
 
 <h2 id="Competitions">Competitions</h2>
 
