--- a/files/en-us/games/techniques/3d_on_the_web/webvr/index.html
+++ b/files/en-us/games/techniques/3d_on_the_web/webvr/index.html
@@ -9,10 +9,10 @@ tags:
 ---
 <div>{{GamesSidebar}}</div>
 
-<p class="summary">The concept of virtual reality in itself isn't new, but now we have the technology to have it working as it should be, and a JavaScript API to make use of it in web applications. This article introduced WebVR from the perspective of its use in games.</p>
+<p>The concept of virtual reality in itself isn't new, but now we have the technology to have it working as it should be, and a JavaScript API to make use of it in web applications. This article introduced WebVR from the perspective of its use in games.</p>
 
 <div class="notecard note">
-<p><strong>Note</strong>: WebVR API is replaced by <a href="/en-US/docs/Web/API/WebXR_Device_API">WebXR Device API</a>. WebVR was never ratified as a standard, was implemented and enabled by default in very few browsers and supported a small number of devices.</p>
+<p><strong>Note:</strong> WebVR API is replaced by <a href="/en-US/docs/Web/API/WebXR_Device_API">WebXR Device API</a>. WebVR was never ratified as a standard, was implemented and enabled by default in very few browsers and supported a small number of devices.</p>
 </div>
 
 <h2 id="VR_devices">VR devices</h2>
@@ -22,7 +22,7 @@ tags:
 <p><img alt="" src="hmds.jpg" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
 
 <div class="note">
-<p><strong>Note</strong>: For more information, read our <a href="/en-US/docs/Web/API/WebVR_API/Concepts">WebVR Concepts</a> article.</p>
+<p><strong>Note:</strong> For more information, read our <a href="/en-US/docs/Web/API/WebVR_API/Concepts">WebVR Concepts</a> article.</p>
 </div>
 
 <h2 id="The_WebVR_API">The WebVR API</h2>
@@ -30,7 +30,7 @@ tags:
 <p>The <a href="/en-US/docs/Web/API/WebVR_API">WebVR API</a> is the central API for capturing information on VR Devices connected to a computer and headset position/orientation/velocity/acceleration information, and converting that into useful data you can use in your games and other applications.</p>
 
 <div class="note">
-<p><strong>Note</strong>: There are of course other APIs useful for creating games, for example <a href="/en-US/docs/Web/API/Gamepad_API">The Gamepad API</a> for control inputs, and the <a href="/en-US/docs/Web/API/Detecting_device_orientation">Device Orientation API</a> for handling display orientation on mobile.</p>
+<p><strong>Note:</strong> There are of course other APIs useful for creating games, for example <a href="/en-US/docs/Web/API/Gamepad_API">The Gamepad API</a> for control inputs, and the <a href="/en-US/docs/Web/API/Detecting_device_orientation">Device Orientation API</a> for handling display orientation on mobile.</p>
 </div>
 
 <h3 id="Browser_support_and_spec_status">Browser support and spec status</h3>
