--- a/files/en-us/games/techniques/async_scripts/index.html
+++ b/files/en-us/games/techniques/async_scripts/index.html
@@ -9,9 +9,7 @@ tags:
 ---
 <div>{{GamesSidebar}}</div>
 
-<div class="summary">
-<p><span class="seoSummary">Every medium or large game should compile <a href="/en-US/docs/Games/Tools/asm.js">asm.js</a> code as part of an async script to give the browser the maximum flexibility to optimize the compilation process. In Gecko, async compilation allows the JavaScript engine to compile the asm.js off the main thread when the game is loading and cache the generated machine code so that the game doesn't need to be compiled on subsequent loads (starting in Firefox 28). To see the difference, toggle <code>javascript.options.parallel_parsing</code> in <code>about:config</code>.</span></p>
-</div>
+<p>Every medium or large game should compile <a href="/en-US/docs/Games/Tools/asm.js">asm.js</a> code as part of an async script to give the browser the maximum flexibility to optimize the compilation process. In Gecko, async compilation allows the JavaScript engine to compile the asm.js off the main thread when the game is loading and cache the generated machine code so that the game doesn't need to be compiled on subsequent loads (starting in Firefox 28). To see the difference, toggle <code>javascript.options.parallel_parsing</code> in <code>about:config</code>.</p>
 
 <h2 id="Putting_async_into_action">Putting async into action</h2>
 
