--- a/files/en-us/games/techniques/audio_for_web_games/index.html
+++ b/files/en-us/games/techniques/audio_for_web_games/index.html
@@ -11,7 +11,7 @@ tags:
 ---
 <div>{{GamesSidebar}}</div>
 
-<p class="summary">Audio is an important part of any game; it adds feedback and atmosphere. Web-based audio is maturing fast, but there are still many browser differences to navigate. We often need to decide which audio parts are essential to our games' experience and which are nice to have but not essential, and devise a strategy accordingly. This article provides a detailed guide to implementing audio for web games, looking at what works currently across as wide a range of platforms as possible.</p>
+<p>Audio is an important part of any game; it adds feedback and atmosphere. Web-based audio is maturing fast, but there are still many browser differences to navigate. We often need to decide which audio parts are essential to our games' experience and which are nice to have but not essential, and devise a strategy accordingly. This article provides a detailed guide to implementing audio for web games, looking at what works currently across as wide a range of platforms as possible.</p>
 
 <h2 id="Mobile_audio_caveats">Mobile audio caveats</h2>
 
@@ -35,11 +35,11 @@ tags:
 <p>To prime audio like this we want to play a part of it; for this reason it is useful to include a moment of silence at the end of your audio sample. Jumping to, playing, and then pausing that silence will mean we can now use JavaScript to play that file at arbitrary points. You can find out more about <a href="/en-US/docs/Web/API/Web_Audio_API/Best_practices#autoplay_policy">best practices with the autoplay policy here</a>.</p>
 
 <div class="note">
-<p><strong>Note</strong>: Playing part of your file at zero volume could also work if the browser allows you to change volume (see below). Also note that playing and immediately pausing your audio does not guarantee that a small piece of audio won't be played.</p>
+<p><strong>Note:</strong> Playing part of your file at zero volume could also work if the browser allows you to change volume (see below). Also note that playing and immediately pausing your audio does not guarantee that a small piece of audio won't be played.</p>
 </div>
 
 <div class="note">
-<p><strong>Note</strong>: Adding a web app to your mobile's homescreen may change its capabilities. In the case of autoplay on iOS, this appears to be the case currently. If possible, you should try your code on several devices and platforms to see how it works.</p>
+<p><strong>Note:</strong> Adding a web app to your mobile's homescreen may change its capabilities. In the case of autoplay on iOS, this appears to be the case currently. If possible, you should try your code on several devices and platforms to see how it works.</p>
 </div>
 
 <h3 id="Volume">Volume</h3>
@@ -53,7 +53,7 @@ tags:
 <p>The {{domxref("HTMLMediaElement")}} interface comes with <a href="/en-US/docs/Web/API/HTMLMediaElement#properties">lots of properties</a> to help determine whether a track is in a state to be playable.</p>
 
 <div class="note">
-<p><strong>Note</strong>: In many ways the concept of buffering is an outdated one. As long as byte-range requests are accepted (which is the default behavior), we should be able to jump to a specific point in the audio without having to download the preceding content. However, preloading is still useful — without it, there would always need to be some client-server communication required before playing can commence.</p>
+<p><strong>Note:</strong> In many ways the concept of buffering is an outdated one. As long as byte-range requests are accepted (which is the default behavior), we should be able to jump to a specific point in the audio without having to download the preceding content. However, preloading is still useful — without it, there would always need to be some client-server communication required before playing can commence.</p>
 </div>
 
 <h3 id="Concurrent_audio_playback">Concurrent audio playback</h3>
@@ -134,19 +134,15 @@ tags:
 <p>There's a <a href="/en-US/docs/Web/API/HTMLMediaElement#browser_compatibility">full compatibility chart for mobile and desktop HTMLMediaElement support here</a>.</p>
 
 <div class="note">
-<p><strong>* Note</strong>: Safari 7 has issues playing if you try and start all pieces of audio simultaneously. If you stagger playback you may have some degree of success.</p>
+<p><strong>Note:</strong> Concurrent audio playback is tested using our <a href="https://jsfiddle.net/dmkyaq0r/">concurrent audio test example</a>, where we attempt to play three pieces of audio at the same time using the standard audio API.</p>
 </div>
 
 <div class="note">
-<p><strong>Note</strong>: Concurrent audio playback is tested using our <a href="https://jsfiddle.net/dmkyaq0r/">concurrent audio test example</a>, where we attempt to play three pieces of audio at the same time using the standard audio API.</p>
+<p><strong>Note:</strong> Simple autoplay functionality is tested with our <a href="https://jsfiddle.net/vpdspp2b/">autoplay test example</a>.</p>
 </div>
 
 <div class="note">
-<p><strong>Note</strong>: Simple autoplay functionality is tested with our <a href="https://jsfiddle.net/vpdspp2b/">autoplay test example</a>.</p>
-</div>
-
-<div class="note">
-<p><strong>Note</strong>: Volume changeability is tested with our <a href="https://jsfiddle.net/7ta12vw4/">volume test example</a>.</p>
+<p><strong>Note:</strong> Volume changeability is tested with our <a href="https://jsfiddle.net/7ta12vw4/">volume test example</a>.</p>
 </div>
 
 <h2 id="Mobile_workarounds">Mobile workarounds</h2>
@@ -203,15 +199,15 @@ myAudio.addEventListener('timeupdate', function() {
 }, false);</pre>
 
 <div class="note">
-<p><strong>Note</strong>: You can <a href="https://jsfiddle.net/59vwaame/">try out our audio sprite player live</a> on JSFiddle.</p>
+<p><strong>Note:</strong> You can <a href="https://jsfiddle.net/59vwaame/">try out our audio sprite player live</a> on JSFiddle.</p>
 </div>
 
 <div class="note">
-<p><strong>Note</strong>: On mobile we may need to trigger this code from a user-initiated event such as a start button being pressed, as described above.</p>
+<p><strong>Note:</strong> On mobile we may need to trigger this code from a user-initiated event such as a start button being pressed, as described above.</p>
 </div>
 
 <div class="note">
-<p><strong>Note</strong>: Watch out for bit rates. Encoding your audio at lower bit rates means smaller file sizes but lower seeking accuracy.</p>
+<p><strong>Note:</strong> Watch out for bit rates. Encoding your audio at lower bit rates means smaller file sizes but lower seeking accuracy.</p>
 </div>
 
 <h3 id="Background_music">Background music</h3>
@@ -233,7 +229,7 @@ myAudio.addEventListener('timeupdate', function() {
 </p>
 
 <div class="note">
-<p><strong>Note</strong>: Significantly, iOS Safari now supports the Web Audio API, which means it's now possible to write web-based games with native-quality audio for iOS.</p>
+<p><strong>Note:</strong> Significantly, iOS Safari now supports the Web Audio API, which means it's now possible to write web-based games with native-quality audio for iOS.</p>
 </div>
 
 <p>As the Web Audio API allows precise timing and control of audio playback, we can use it to play samples at specific moments, which is a crucial immersive aspect of gaming. You want those explosions to be accompanied by a thundering boom, not followed by one, after all.</p>
@@ -397,13 +393,13 @@ function playTrack(audioBuffer) {
 </pre>
 
 <div class="note">
-<p><strong>Note</strong>: You can <a href="https://mdn.github.io/webaudio-examples/multi-track/">see this demo in action here</a> and <a href="https://github.com/mdn/webaudio-examples/tree/master/multi-track">view the source code here</a>.</p>
+<p><strong>Note:</strong> You can <a href="https://mdn.github.io/webaudio-examples/multi-track/">see this demo in action here</a> and <a href="https://github.com/mdn/webaudio-examples/tree/master/multi-track">view the source code here</a>.</p>
 </div>
 
 <p>In the context of your game world you may have loops and samples that are played in different circumstances, and it can be useful to be able to synchronize with other tracks for a more seamless experience.</p>
 
 <div class="note">
-<p><strong>Note</strong>: This example does not wait for the beat to end before introducing the next piece; we could do this if we knew the BPM (Beats Per Minute) of the tracks.</p>
+<p><strong>Note:</strong> This example does not wait for the beat to end before introducing the next piece; we could do this if we knew the BPM (Beats Per Minute) of the tracks.</p>
 </div>
 
 <p>You may find that the introduction of a new track sounds more natural if it comes in on the beat/bar/phrase or whatever units you want to chunk your background music into.</p>
@@ -424,11 +420,11 @@ function playTrack(audioBuffer) {
 }</pre>
 
 <div class="note">
-<p><strong>Note</strong>: You can <a href="https://jsfiddle.net/c87z11jj/2/">try our wait calculator code</a> here, on JSFiddle (I've synched to the bar in this case).</p>
+<p><strong>Note:</strong> You can <a href="https://jsfiddle.net/c87z11jj/2/">try our wait calculator code</a> here, on JSFiddle (I've synched to the bar in this case).</p>
 </div>
 
 <div class="note">
-<p><strong>Note</strong>: If the first parameter is 0 or less than the context <code>currentTime</code>, playback will commence immediately.</p>
+<p><strong>Note:</strong> If the first parameter is 0 or less than the context <code>currentTime</code>, playback will commence immediately.</p>
 </div>
 
 <h3 id="Positional_audio">Positional audio</h3>
