--- a/files/en-us/games/techniques/control_mechanisms/index.html
+++ b/files/en-us/games/techniques/control_mechanisms/index.html
@@ -13,7 +13,7 @@ tags:
   - mouse
   - touch
 ---
-<div>{{GamesSidebar}}</div><p class="summary">One of HTML5's main advantages as a game development platform is the ability to run on various platforms and devices. Streamlining cross device differences creates multiple challenges, not least when providing appropriate controls for different contexts. In this series of articles we will show you how you can approach building a game that can be played using touchscreen smartphones, mouse and keyboard, and also less common mechanisms such as gamepads.</p>
+<div>{{GamesSidebar}}</div><p>One of HTML5's main advantages as a game development platform is the ability to run on various platforms and devices. Streamlining cross device differences creates multiple challenges, not least when providing appropriate controls for different contexts. In this series of articles we will show you how you can approach building a game that can be played using touchscreen smartphones, mouse and keyboard, and also less common mechanisms such as gamepads.</p>
 
 <h2 id="Case_study">Case study</h2>
 
