--- a/files/en-us/games/techniques/control_mechanisms/mobile_touch/index.html
+++ b/files/en-us/games/techniques/control_mechanisms/mobile_touch/index.html
@@ -13,9 +13,11 @@ tags:
 
 <p>{{NextMenu("Games/Techniques/Control_mechanisms/Desktop_with_mouse_and_keyboard", "Games/Techniques/Control_mechanisms")}}</p>
 
-<p class="summary">The future of mobile gaming is definitely web, and many developers choose the <a href="/en-US/docs/Web/Apps/Mobile_First">mobile first</a> approach in their game development process — in the modern world, this generally also involves implementing touch controls. In this tutorial, we will see how easy it is to implement mobile controls in an HTML5 game, and enjoy playing on a mobile touch-enabled device.</p>
+<p>The future of mobile gaming is definitely web, and many developers choose the <a href="/en-US/docs/Web/Apps/Mobile_First">mobile first</a> approach in their game development process — in the modern world, this generally also involves implementing touch controls. In this tutorial, we will see how easy it is to implement mobile controls in an HTML5 game, and enjoy playing on a mobile touch-enabled device.</p>
 
-<p class="note"><strong>Note</strong>: The game <a class="external external-icon" href="https://rogers2.enclavegames.com/demo/">Captain Rogers: Battle at Andromeda</a> is built with Phaser and managing the controls is Phaser-based, but it could also be done in pure JavaScript. The good thing about using Phaser is that it offers helper variables and functions for easier and faster development, but it's entirely up to you which approach you to choose.</p>
+<div class="note">
+<p><strong>Note:</strong> The game <a href="https://rogers2.enclavegames.com/demo/">Captain Rogers: Battle at Andromeda</a> is built with Phaser and managing the controls is Phaser-based, but it could also be done in pure JavaScript. The good thing about using Phaser is that it offers helper variables and functions for easier and faster development, but it's entirely up to you which approach you to choose.</p>
+</div>
 
 <h2 id="Pure_JavaScript_approach">Pure JavaScript approach</h2>
 
@@ -37,7 +39,7 @@ el.addEventListener("touchcancel", handleCancel);</pre>
 </ul>
 
 <div class="note">
-<p><strong>Note</strong>: The <a href="/en-US/docs/Web/API/Touch_events">touch events</a> reference article provides more examples and information.</p>
+<p><strong>Note:</strong> The <a href="/en-US/docs/Web/API/Touch_events">touch events</a> reference article provides more examples and information.</p>
 </div>
 
 <h3 id="Pure_JavaScript_demo">Pure JavaScript demo</h3>
