--- a/files/en-us/games/techniques/index.html
+++ b/files/en-us/games/techniques/index.html
@@ -7,9 +7,7 @@ tags:
 ---
 <div>{{GamesSidebar}}</div>
 
-<div class="summary">
-<p><span class="seoSummary">This page lists essential core techniques for anyone wanting to develop games using open web technologies.</span></p>
-</div>
+<p>This page lists essential core techniques for anyone wanting to develop games using open web technologies.</p>
 
 <dl>
  <dt><a href="/en-US/docs/Games/Techniques/Async_scripts">Using async scripts for asm.js</a></dt>
