--- a/files/en-us/games/techniques/tilemaps/square_tilemaps_implementation_colon__scrolling_maps/index.html
+++ b/files/en-us/games/techniques/tilemaps/square_tilemaps_implementation_colon__scrolling_maps/index.html
@@ -13,10 +13,10 @@ tags:
 ---
 <div>{{GamesSidebar}}</div>
 
-<p class="summary">This article covers how to implement scrolling square tilemaps using the <a href="/en-US/docs/Web/API/Canvas_API">Canvas API</a>.</p>
+<p>This article covers how to implement scrolling square tilemaps using the <a href="/en-US/docs/Web/API/Canvas_API">Canvas API</a>.</p>
 
 <div class="note">
-<p><strong>Note</strong>: When writing this article, we assumed previous reader knowledge of canvas basics such as how get a 2D canvas context, load images, etc., which is all explained in the <a href="/en-US/docs/Web/API/Canvas_API/Tutorial">Canvas API tutorial</a>, as well as the basic information included in our <a href="/en-US/docs/Games/Techniques/Tilemaps">Tilemaps</a> introduction article. This article also builds upon <a href="/en-US/docs/Games/Techniques/Tilemaps/Square_tilemaps_implementation%3A_Static_maps">implementing static square tilemaps</a> — you should read that too if you've not done so already.</p>
+<p><strong>Note:</strong> When writing this article, we assumed previous reader knowledge of canvas basics such as how get a 2D canvas context, load images, etc., which is all explained in the <a href="/en-US/docs/Web/API/Canvas_API/Tutorial">Canvas API tutorial</a>, as well as the basic information included in our <a href="/en-US/docs/Games/Techniques/Tilemaps">Tilemaps</a> introduction article. This article also builds upon <a href="/en-US/docs/Games/Techniques/Tilemaps/Square_tilemaps_implementation%3A_Static_maps">implementing static square tilemaps</a> — you should read that too if you've not done so already.</p>
 </div>
 
 <h2 id="The_camera">The camera</h2>
