--- a/files/en-us/games/tutorials/2d_breakout_game_phaser/animations_and_tweens/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_phaser/animations_and_tweens/index.html
@@ -16,11 +16,9 @@ tags:
 
 <p>{{PreviousNext("Games/Workflows/2D_Breakout_game_Phaser/Extra_lives", "Games/Workflows/2D_Breakout_game_Phaser/Buttons")}}</p>
 
-<div class="summary">
 <p>This is the <strong>14th step</strong> out of 16 of the <a href="/en-US/docs/Games/Tutorials/2D_breakout_game_Phaser">Gamedev Phaser tutorial</a>. You can find the source code as it should look after completing this lesson at <a href="https://github.com/end3r/Gamedev-Phaser-Content-Kit/blob/gh-pages/demos/lesson14.html">Gamedev-Phaser-Content-Kit/demos/lesson14.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">To make the game look more juicy and alive we can use animations and tweens. This will result in a better, more entertaining experience. Let's explore how to implement Phaser animations and tweens in our game.</span></p>
+<p>To make the game look more juicy and alive we can use animations and tweens. This will result in a better, more entertaining experience. Let's explore how to implement Phaser animations and tweens in our game.</p>
 
 <h2 id="Animations">Animations</h2>
 
