--- a/files/en-us/games/tutorials/2d_breakout_game_phaser/buttons/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_phaser/buttons/index.html
@@ -15,11 +15,9 @@ tags:
 
 <p>{{PreviousNext("Games/Workflows/2D_Breakout_game_Phaser/Animations_and_tweens", "Games/Workflows/2D_Breakout_game_Phaser/Randomizing_gameplay")}}</p>
 
-<div class="summary">
 <p>This is the <strong>15th step</strong> out of 16 of the <a href="/en-US/docs/Games/Tutorials/2D_breakout_game_Phaser">Gamedev Phaser tutorial</a>. You can find the source code as it should look after completing this lesson at <a href="https://github.com/end3r/Gamedev-Phaser-Content-Kit/blob/gh-pages/demos/lesson15.html">Gamedev-Phaser-Content-Kit/demos/lesson15.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">Instead of starting the game right away we can leave that decision to the player by adding a Start button they can press. Let's investigate how to do that.</span></p>
+<p>Instead of starting the game right away we can leave that decision to the player by adding a Start button they can press. Let's investigate how to do that.</p>
 
 <h2 id="New_variables">New variables</h2>
 
@@ -59,7 +57,7 @@ startButton.anchor.set(0.5);
 </ul>
 
 <div class="note">
-<p><strong>Note</strong>: The over event is the same as hover, out is when the pointer moves out of the button and down is when the button is pressed.</p>
+<p><strong>Note:</strong> The over event is the same as hover, out is when the pointer moves out of the button and down is when the button is pressed.</p>
 </div>
 
 <p>Now we need to define the <code>startGame()</code> function referenced in the code above:</p>
