--- a/files/en-us/games/tutorials/2d_breakout_game_phaser/extra_lives/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_phaser/extra_lives/index.html
@@ -15,11 +15,9 @@ tags:
 
 <p>{{PreviousNext("Games/Workflows/2D_Breakout_game_Phaser/Win_the_game", "Games/Workflows/2D_Breakout_game_Phaser/Animations_and_tweens")}}</p>
 
-<div class="summary">
 <p>This is the <strong>13th step</strong> out of 16 of the <a href="/en-US/docs/Games/Tutorials/2D_breakout_game_Phaser">Gamedev Phaser tutorial</a>. You can find the source code as it should look after completing this lesson at <a href="https://github.com/end3r/Gamedev-Phaser-Content-Kit/blob/gh-pages/demos/lesson13.html">Gamedev-Phaser-Content-Kit/demos/lesson13.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">We can make the game enjoyable for longer by adding lives. In this article we'll implement a lives system, so that the player can continue playing until they have lost three lives, not just one.</span></p>
+<p>We can make the game enjoyable for longer by adding lives. In this article we'll implement a lives system, so that the player can continue playing until they have lost three lives, not just one.</p>
 
 <h2 id="New_variables">New variables</h2>
 
