--- a/files/en-us/games/tutorials/2d_breakout_game_phaser/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_phaser/index.html
@@ -14,7 +14,7 @@ tags:
 
 <p>{{Next("Games/Workflows/2D_Breakout_game_Phaser/Initialize_the_framework")}}</p>
 
-<p class="summary">In this step-by-step tutorial, we create a simple mobile <strong>MDN Breakout</strong> game written in JavaScript, using the <a href="https://phaser.io/">Phaser</a> framework.</p>
+<p>In this step-by-step tutorial, we create a simple mobile <strong>MDN Breakout</strong> game written in JavaScript, using the <a href="https://phaser.io/">Phaser</a> framework.</p>
 
 <p>Every step has editable, live samples available to play with, so you can see what the intermediate stages should look like. You will learn the basics of using the Phaser framework to implement fundamental game mechanics like rendering and moving images, collision detection, control mechanisms, framework-specific helper functions, animations and tweens, and winning and losing states.</p>
 
@@ -50,7 +50,7 @@ tags:
 <p>After that, you can pick any framework you like and use it for your projects; we have chosen Phaser as it is a good solid framework, with a good support and community available, and a good set of plugins. Frameworks speed up development time and help take care of the boring parts, allowing you to concentrate on the fun stuff. However, frameworks are not always perfect, so if something unexpected happens or you want to write some functionality that the framework does not provide, you will need some pure JavaScript knowledge.</p>
 
 <div class="note">
-<p><strong>Note</strong>: This series of articles can be used as material for hands-on game development workshops. You can also make use of the <a href="https://github.com/end3r/Gamedev-Phaser-Content-Kit">Gamedev Phaser Content Kit</a> based on this tutorial if you want to give a talk about game development with Phaser.</p>
+<p><strong>Note:</strong> This series of articles can be used as material for hands-on game development workshops. You can also make use of the <a href="https://github.com/end3r/Gamedev-Phaser-Content-Kit">Gamedev Phaser Content Kit</a> based on this tutorial if you want to give a talk about game development with Phaser.</p>
 </div>
 
 <h2 id="Next_steps">Next steps</h2>
