--- a/files/en-us/games/tutorials/2d_breakout_game_phaser/randomizing_gameplay/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_phaser/randomizing_gameplay/index.html
@@ -14,11 +14,9 @@ tags:
 
 <p>{{Previous("Games/Workflows/2D_Breakout_game_Phaser/Buttons")}}</p>
 
-<div class="summary">
 <p>This is the <strong>16th step</strong> out of 16 of the <a href="/en-US/docs/Games/Tutorials/2D_breakout_game_Phaser">Gamedev Phaser tutorial</a>. You can find the source code as it should look after completing this lesson at <a href="https://github.com/end3r/Gamedev-Phaser-Content-Kit/blob/gh-pages/demos/lesson16.html">Gamedev-Phaser-Content-Kit/demos/lesson16.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">Our game appears to be completed, but if you look close enough you'll notice that the ball is bouncing off the paddle at the same angle throughout the whole game. This means that every game is quite similar. To fix this and improve playability we should make the rebound angles more random, and in this article we'll look at how.</span></p>
+<p>Our game appears to be completed, but if you look close enough you'll notice that the ball is bouncing off the paddle at the same angle throughout the whole game. This means that every game is quite similar. To fix this and improve playability we should make the rebound angles more random, and in this article we'll look at how.</p>
 
 <h2 id="Making_rebounds_more_random">Making rebounds more random</h2>
 
