--- a/files/en-us/games/tutorials/2d_breakout_game_phaser/the_score/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_phaser/the_score/index.html
@@ -15,11 +15,9 @@ tags:
 
 <p>{{PreviousNext("Games/Workflows/2D_Breakout_game_Phaser/Collision_detection", "Games/Workflows/2D_Breakout_game_Phaser/Win_the_game")}}</p>
 
-<div class="summary">
 <p>This is the <strong>11th step</strong> out of 16 of the <a href="/en-US/docs/Games/Tutorials/2D_breakout_game_Phaser">Gamedev Phaser tutorial</a>. You can find the source code as it should look after completing this lesson at <a href="https://github.com/end3r/Gamedev-Phaser-Content-Kit/blob/gh-pages/demos/lesson11.html">Gamedev-Phaser-Content-Kit/demos/lesson11.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">Having a score can also make the game more interesting — you can try to beat your own highscore, or your friend's. In this article we'll add a scoring system to our game.</span></p>
+<p>Having a score can also make the game more interesting — you can try to beat your own highscore, or your friend's. In this article we'll add a scoring system to our game.</p>
 
 <p>We will use a separate variable for storing the score and Phaser's <code>text()</code> method to print it out onto the screen.</p>
 
