--- a/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/collision_detection/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/collision_detection/index.html
@@ -14,11 +14,9 @@ tags:
 
 <p>{{PreviousNext("Games/Workflows/2D_Breakout_game_pure_JavaScript/Build_the_brick_field", "Games/Workflows/2D_Breakout_game_pure_JavaScript/Track_the_score_and_win")}}</p>
 
-<div class="summary">
 <p>This is the <strong>7th step</strong> out of 10 of the <a href="/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript">Gamedev Canvas tutorial</a>. You can find the source code as it should look after completing this lesson at <a href="https://github.com/end3r/Gamedev-Canvas-workshop/blob/gh-pages/lesson07.html">Gamedev-Canvas-workshop/lesson7.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">We have the bricks appearing on the screen already, but the game still isn't <em>that</em> interesting as the ball goes through them. We need to think about adding collision detection so it can bounce off the bricks and break them.</span></p>
+<p>We have the bricks appearing on the screen already, but the game still isn't <em>that</em> interesting as the ball goes through them. We need to think about adding collision detection so it can bounce off the bricks and break them.</p>
 
 <p>It's our decision how to implement this, of course, but it can be tough to calculate whether the ball is touching the rectangle or not because there are no helper functions in Canvas for this. For the sake of this tutorial we will do it the easiest way possible. We will check if the center of the ball is colliding with any of the given bricks. This won't give a perfect result every time, and there are much more sophisticated ways to do collision detection, but this will work fine for teaching you the basic concepts.</p>
 
@@ -123,7 +121,7 @@ for(var c=0; c&lt;brickColumnCount; c++) {
 <p>{{JSFiddleEmbed("https://jsfiddle.net/yumetodo/kaed3hbu/","","395")}}</p>
 
 <div class="note">
-<p><strong>Exercise</strong>: change the color of the ball when it hits the brick.</p>
+<p><strong>Note:</strong> Try changing the color of the ball when it hits the brick.</p>
 </div>
 
 <h2 id="Next_steps">Next steps</h2>
