--- a/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/finishing_up/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/finishing_up/index.html
@@ -14,11 +14,9 @@ tags:
 
 <p>{{Previous("Games/Workflows/2D_Breakout_game_pure_JavaScript/Mouse_controls")}}</p>
 
-<div class="summary">
 <p>This is the <strong>10th and final step</strong> of the <a href="/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript">Gamedev Canvas tutorial</a>. You can find the source code as it should look after completing this lesson at <a href="https://github.com/end3r/Gamedev-Canvas-workshop/blob/gh-pages/lesson10.html">Gamedev-Canvas-workshop/lesson10.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">There's always room for improvements in any game we write. For example, we can offer more than one life to the player. They could make a mistake or two and still be able to finish the game. We could also improve our code rendering.</span></p>
+<p>There's always room for improvements in any game we write. For example, we can offer more than one life to the player. They could make a mistake or two and still be able to finish the game. We could also improve our code rendering.</p>
 
 <h2 id="Giving_the_player_some_lives">Giving the player some lives</h2>
 
@@ -94,7 +92,7 @@ else {
 <p>{{JSFiddleEmbed("https://jsfiddle.net/raymondjplante/dfh2tpu1/","","395")}}</p>
 
 <div class="note">
-<p><strong>Exercise</strong>: change the number of lives and the angle the ball bounces off the paddle.</p>
+<p><strong>Note:</strong>: Try changing the number of lives and the angle the ball bounces off the paddle.</p>
 </div>
 
 <h2 id="Game_over_-_for_now!">Game over - for now!</h2>
