--- a/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/game_over/index.html
+++ b/files/en-us/games/tutorials/2d_breakout_game_pure_javascript/game_over/index.html
@@ -14,11 +14,9 @@ tags:
 
 <p>{{PreviousNext("Games/Workflows/2D_Breakout_game_pure_JavaScript/Paddle_and_keyboard_controls", "Games/Workflows/2D_Breakout_game_pure_JavaScript/Build_the_brick_field")}}</p>
 
-<div class="summary">
 <p>This is the <strong>5th step</strong> out of 10 of the <a href="/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript">Gamedev Canvas tutorial</a>. You can find the source code as it should look after completing this lesson at <a href="https://github.com/end3r/Gamedev-Canvas-workshop/blob/gh-pages/lesson05.html">Gamedev-Canvas-workshop/lesson5.html</a>.</p>
-</div>
 
-<p><span class="seoSummary">It's fun to watch the ball bouncing off the walls and be able to move the paddle around, but other than that the game does nothing and doesn't have any progression or end goal. It would be good from the gameplay point of view to be able to lose. The logic behind losing in breakout is simple. If you miss the ball with the paddle and let it reach the bottom edge of the screen, then it's game over.</span></p>
+<p>It's fun to watch the ball bouncing off the walls and be able to move the paddle around, but other than that the game does nothing and doesn't have any progression or end goal. It would be good from the gameplay point of view to be able to lose. The logic behind losing in breakout is simple. If you miss the ball with the paddle and let it reach the bottom edge of the screen, then it's game over.</p>
 
 <h2 id="Implementing_game_over">Implementing game over</h2>
 
@@ -81,7 +79,7 @@ if(y + dy &gt; canvas.height-ballRadius || y + dy &lt; ballRadius) {
 <p>{{JSFiddleEmbed("https://jsfiddle.net/raymondjplante/L61c9y50/","","395")}}</p>
 
 <div class="note">
-<p><strong>Exercise</strong>: make the ball move faster when it hits the paddle.</p>
+<p><strong>Note:</strong> Try making the ball move faster when it hits the paddle.</p>
 </div>
 
 <h2 id="Next_steps">Next steps</h2>
